--- a/Puzzle1 (Old Bridge)/index.html
+++ b/Puzzle1 (Old Bridge)/index.html
@@ -88,7 +88,7 @@
 			<div class="col-xs-10">
 				<div class="row">
 					<span class="col-xs-4 zombiezone-desc">Zombie Zone</span>
-					<span class="col-xs-4 bridge-desc">Bridge</span>
+					<span class="col-xs-4 bridge-desc">Old Bridge</span>
 					<span class="col-xs-4 safezone-desc">Safe Zone</span>
 				</div>
 			</div>
