--- a/Puzzle1 (Old Bridge)/index.html
+++ b/Puzzle1 (Old Bridge)/index.html
@@ -35,10 +35,10 @@
 			<h1 id="timeDisplay" class="col-xs-12">Old Bridge: 17 Minutes Before Death</h1>
 			<p class="col-xs-12" id="shortDescription">Save everyone. Cross the bridge in time. Use your time wisely.</p>
 			<ul class="col-xs-12" id="duration-list">
-				<li class="duration-list-item" id="item-Professor">Professor: 10 min</li>
-				<li class="duration-list-item" id="item-Girl">Girl: 2 min</li>
-				<li class="duration-list-item" id="item-Boy">Boy: 1 min</li>
-				<li class="duration-list-item" id="item-Janitor">Janitor: 5 min</li>
+				<li class="duration-list-item" id="item-Professor">Professor: 10 min.</li>
+				<li class="duration-list-item" id="item-Girl">Girl: 2 min.</li>
+				<li class="duration-list-item" id="item-Boy">Boy: 1 min.</li>
+				<li class="duration-list-item" id="item-Janitor">Janitor: 5 min.</li>
 			</ul>
 		</div>
 		<div class="row">
