--- a/Puzzle1 (Old Bridge)/index.html
+++ b/Puzzle1 (Old Bridge)/index.html
@@ -63,13 +63,21 @@
 					</span>
 					<span class="col-xs-6 col-sm-4">
 						<div class="row bridge">
-							<a href="#" data-index="0" class="col-xs-2 col-sm-2 bridge-unsafe-side marker"></a>
-							<a href="#" data-index="1" class="col-xs-2 col-sm-2 bridge-unsafe-side marker"></a>
+							<div class="col-xs-4">
+								<div class="row bridge">
+									<a href="#" data-index="0" class="col-xs-4 bridge-unsafe-side marker"></a>
+									<a href="#" data-index="1" class="col-xs-4 bridge-unsafe-side marker"></a>
+								</div>
+							</div>
 
 							<a href="#" class="col-xs-4 col-sm-4"></a>
 
-							<a href="#" data-index="0" class="col-xs-2 col-sm-2 bridge-safe-side marker"></a>
-							<a href="#" data-index="1" class="col-xs-2 col-sm-2 bridge-safe-side marker"></a>
+							<div class="col-xs-4">
+								<div class="row bridge">
+									<a href="#" data-index="0" class="col-xs-4 bridge-safe-side marker"></a>
+									<a href="#" data-index="1" class="col-xs-4 bridge-safe-side marker"></a>
+								</div>
+							</div>
 						</div>
 					</span>
 					<span class="col-xs-3 col-sm-4 safe-side">
