--- a/Puzzle1 (Old Bridge)/index.html
+++ b/Puzzle1 (Old Bridge)/index.html
@@ -42,37 +42,34 @@
 			</ul>
 		</div>
 		<div class="row">
-			<div class="col-sm-1">
-				
-			</div>
-			<div class="col-xs-12 col-sm-10">
+			<div class="col-xs-12 col-sm-12">
 				<!-- Cross bridge button -->
 				<div class="row"> 
-					<span class="col-xs-5 col-sm-5"></span>
-					<span class="col-xs-2 col-sm-2 btn-cross">cross</span>
-					<span class="col-xs-5 col-sm-5"></span>
+					<span class="col-xs-5"></span>
+					<span class="col-xs-2 btn-cross">cross</span>
+					<span class="col-xs-5"></span>
 				</div>
 
 				<!-- tokens -->
 				<div class="row">
-					<span class="col-xs-3 col-sm-4 unsafe-side btn">
+					<span class="col-xs-3 unsafe-side btn">
 						<a href="#" data-index="0" class="col-xs-6 col-sm-6 marker"></a>
 						<a href="#" data-index="1" class="col-xs-6 col-sm-6 marker gg"></a>
 						<a href="#" data-index="2" class="col-xs-6 col-sm-6 marker"></a>
 						<a href="#" data-index="3" class="col-xs-6 col-sm-6 marker"></a>
 					</span>
-					<span class="col-xs-6 col-sm-4">
+					<span class="col-xs-6">
 						<div class="row bridge">
-							<div class="col-xs-4">
+							<div class="col-xs-3">
 								<div class="row bridge">
 									<a href="#" data-index="0" class="col-xs-12 bridge-unsafe-side marker"></a>
 									<a href="#" data-index="1" class="col-xs-12 bridge-unsafe-side marker"></a>
 								</div>
 							</div>
 
-							<a href="#" class="col-xs-4 col-sm-4"></a>
+							<a href="#" class="col-xs-6"></a>
 
-							<div class="col-xs-4">
+							<div class="col-xs-3">
 								<div class="row bridge">
 									<a href="#" data-index="0" class="col-xs-12 bridge-safe-side marker"></a>
 									<a href="#" data-index="1" class="col-xs-12 bridge-safe-side marker"></a>
@@ -80,7 +77,7 @@
 							</div>
 						</div>
 					</span>
-					<span class="col-xs-3 col-sm-4 safe-side">
+					<span class="col-xs-3 safe-side">
 						<a href="#" data-index="0" class="col-xs-6 col-sm-6 marker"></a>
 						<a href="#" data-index="1" class="col-xs-6 col-sm-6 marker"></a>
 						<a href="#" data-index="2" class="col-xs-6 col-sm-6 marker"></a>
@@ -88,16 +85,13 @@
 					</span>
 				</div>
 			</div>
-			<div class="col-xs-1 col-sm-1">
-				
-			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-sm-12">
+			<div class="col-xs-12">
 				<div class="row">
-					<span class="col-xs-4 col-sm-4 zombiezone-desc">Zombie Zone</span>
-					<span class="col-xs-4 col-sm-4 bridge-desc">Old Bridge</span>
-					<span class="col-xs-4 col-sm-4 safezone-desc">Safe Zone</span>
+					<span class="col-xs-3 zombiezone-desc">Zombie Zone</span>
+					<span class="col-xs-6 bridge-desc">Old Bridge</span>
+					<span class="col-xs-3 safezone-desc">Safe Zone</span>
 				</div>
 			</div>
 		</div>
